# warp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: pesat_r1cs_ior.rs  poseidon_hash.rs  reed_solomon.rs  warp_rs.rs
benches/utils/: codes.rs  domain_sep.rs  domainsep.rs  hash_chain.rs  merkle.rs  mod.rs  poseidon.rs
src/: error.rs  ior.rs  lib.rs  serialize.rs  traits.rs  types.rs
src/accumulator/: mod.rs
src/accumulator/baseline/: mod.rs
src/accumulator/baseline/is_prime/: accumulator.rs  mod.rs
src/accumulator/warp/: accumulator.rs  mod.rs  traits.rs  verifier.rs  warp_accumulator.rs
src/constraints/: mod.rs
src/crypto/: mod.rs
src/crypto/blake3_crh/: fields.rs  mod.rs
src/crypto/merkle/: blake3.rs  mod.rs  parameters.rs  poseidon.rs
src/domainsep/: mod.rs
src/fields/: mod.rs
src/iors/: ior_codewords_batch.rs  mod.rs
src/iors/codeword_batching/: mod.rs  twin_constraint.rs
src/iors/multilinear_constraint_batching/: mod.rs
src/iors/pesat/: mod.rs  r1cs.rs
src/iors/pesat/r1cs/: domainsep.rs  mod.rs  twin_constraint.rs
src/iors/twin_constraint_pseudo_batching/: mod.rs
src/linear_code/: linear_code.rs  linear_code_trait.rs  mod.rs
src/linear_code/brakedown/: config.rs  linear_code.rs  mod.rs
src/linear_code/brakedown_p3/: convert.rs  mod.rs
src/linear_code/brakedown_tmp/: mod.rs
src/linear_code/raa/: config.rs  linear_code.rs  mod.rs
src/linear_code/reed_solomon/: config.rs  linear_code.rs  mod.rs  multi_constraints.rs
src/merkle/: blake3.rs  digest.rs  mod.rs  parameters.rs  poseidon.rs
src/protocol/: mod.rs  query.rs
src/protocol/domainsep/: mod.rs
src/protocol/sumcheck/: generic.rs  mod.rs  multilinear_constraint_batching.rs  twin_constraint_pseudo_batching.rs
src/protocol/transcript/: mod.rs  prover.rs  verifier.rs
src/relation/: description.rs  identity.rs  is_prime.rs  merkle_inclusion.rs  mod.rs  preimage.rs  relation.rs
src/relation/identity/: instance.rs  mod.rs  relation.rs  synthesizer.rs  witness.rs
src/relation/is_prime/: mod.rs  pratt_certificate.rs  relation.rs  synthesizer.rs  witness.rs
src/relation/merkle_inclusion/: config.rs  instance.rs  relation.rs  synthesizer.rs  witness.rs
src/relation/preimage/: instance.rs  mod.rs  relation.rs  synthesizer.rs  witness.rs
src/relation_accumulator/: mod.rs  relation_accumulator.rs
src/relation_accumulator/baseline/is_prime/: relation_accumulator.rs
src/relation_accumulator/merkle/: mod.rs  relation_accumulator.rs
src/relation_accumulator/merkle/basic/: mod.rs  relation_accumulator.rs
src/relation_accumulator/merkle/is_prime/: mod.rs  relation_accumulator.rs
src/relation_accumulator/warp/: mod.rs  relation_accumulator.rs
src/relations/: description.rs  merkle_inclusion.rs  mod.rs
src/relations/r1cs/: mod.rs
src/relations/r1cs/hashchain/: mod.rs  relation.rs  synthesizer.rs
src/relations/r1cs/identity/: mod.rs  relation.rs  synthesizer.rs  witness.rs
src/relations/r1cs/is_prime/: instance.rs  mod.rs  relation.rs  synthesizer.rs  witness.rs
src/relations/r1cs/merkle_inclusion/: config.rs  mod.rs  relation.rs  synthesizer.rs  witness.rs
src/relations/r1cs/preimage/: config.rs  instance.rs  mod.rs  relation.rs  synthesizer.rs
src/relations/relation/: description.rs  mod.rs  relation.rs
src/relations/relation_trait/: relation.rs
src/sumcheck/: mod.rs  multilinear_constraint_batching.rs  twin_constraint_pseudo_batching.rs
src/tests/: fields.rs  mod.rs
src/utils/: errs.rs  fields.rs  hypercube.rs  mod.rs  poly.rs  poseidon.rs
