[package]
name = "warp"
version = "0.0.1"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.5.0", features = [
    "merkle_tree",
    "crh",
    "r1cs",
    "sponge",
] }
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
blake3 = "1.5.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
spongefish = { git = "https://github.com/z-tech/spongefish.git", branch = "smallfp-support", features = [
    "ark-ff",
] }
efficient-sumcheck = { git = "https://github.com/compsec-epfl/efficient-sumcheck.git" }
thiserror = "2.0.16"
ark-codes = { git = "https://github.com/dmpierre/ark-codes.git" }


[patch.crates-io]
ark-crypto-primitives = { git = "https://github.com/benbencik/crypto-primitives.git", branch = "smallfp-absorb-trait" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }

# resolve transitive pull of spongefish from efficient-sumcheck
[patch."https://github.com/arkworks-rs/spongefish"]
spongefish = { git = "https://github.com/z-tech/spongefish.git", branch = "smallfp-support" }

[dev-dependencies]
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
criterion = "0.8"

[features]
default = ["asm"]

asm = ["ark-ff/asm"]

[[bench]]
name = "warp_rs"
harness = false
